--- a/views/layout.erb
+++ b/views/layout.erb
@@ -51,7 +51,7 @@
       <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
           <ul class="nav nav-sidebar">
-            <li class="active"><a href="./scan">スキャン <span class="sr-only">(current)</span></a></li>
+            <li ><a href="./scan">スキャン <span class="sr-only">(current)</span></a></li>
             <li><a href="./registered">登録済み</a></li>
           </ul>
         </div>
@@ -68,5 +68,6 @@
     <script src="./js/vendor/holder.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="./js/ie10-viewport-bug-workaround.js"></script>
+
   </body>
 </html>
